[package]
name = "nexus_divus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
toml = "0.5"
urlencoding = "2.1"
clap = "3.2.22"